# dlib

examples/android/: .gitignore  CMakeLists.txt  build.gradle
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/android/src/main/: AndroidManifest.xml
examples/android/src/main/java/com/github/dlib/example/android/: MainActivity.java
examples/android/src/main/res/layout/: main_activity.xml
examples/android/src/main/res/values/: strings.xml
